corrected white spacing

--- a/survey-form/style.css
+++ b/survey-form/style.css
@@ -115,7 +115,7 @@ p {
 label {
     display: flex;
     align-items: center;
-    margin-bottom: 1em;
+    margin-bottom: 0.5em;
 }
 
 input.input-radio {
@@ -123,14 +123,14 @@ input.input-radio {
 }
 
 .input-checkbox {
-    padding: 5em;
-    margin: 0em 1em 0 0;
+    margin-right: 1em;
 
 }
 .input-textarea {
     min-height: 10em;
     width: 95%;
     border-radius: 1em;
+    margin-bottom: 1em;
     resize: verticle;
 }
 
